--- a/Project1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -155,7 +155,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+DebuggerAttached=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1195,4 +1196,9 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[DetailPropertyExpansion]
+WorldPartitionRuntimeSpatialHash="\"Object\" "
+WorldPartitionRuntimeHash="\"Object\" "
+Object="\"Object\" "
 
